--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,4 +11,5 @@
  *= require_self
  *= require_tree .
  */
-@import "twitter/bootstrap"
+@import "twitter/bootstrap";
+@import "twitter/bootstrap-responsive";
